--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <a href="ksiega10.html">10</a> 
 <a href="ksiega11.html">11</a> 
 <a href="ksiega12.html">12</a> 
+<a href="ksiega13.html">12</a>
 
 </body>
 </html>
